--- a/trunk/zeqktools/ZeqkTools.WindowsForms/Properties/Resources.resx
+++ b/trunk/zeqktools/ZeqkTools.WindowsForms/Properties/Resources.resx
@@ -121,4 +121,10 @@
   <data name="legendIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\legend.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="square" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\square.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="transparentsquare" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\transparentsquare.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
